<resources>
    <string name="app_name">LT Chatbot</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_cr_number">Enter CR No.</string>
    <string name="help"> <u>Help!</u></string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="confirm_mobile_number">Confirm mobile number</string>
    <string name="i_accept_all_the">I accept all the</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="login">Login</string>
    <string name="update_number">Update Number ?</string>
    <string name="request_update">Request Update</string>
    <string name="cancel">Cancel</string>
    <string name="otp_text">OTP has been sent to</string>
    <string name="did_not_receive">Didn\'t Receive ?</string>
    <string name="edit_mobile_number">Edit Mobile Number.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="do_not_have_otp">Don\'t have an OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="see_all">See All</string>
    <string name="top_alk_side_effects">Top ALK Side Effects</string>
    <string name="know_your_side_effects">Know Your Side Effects</string>
    <string name="what_our_doctor_say">What our doctors say</string>
    <string name="did_you_know">Did you know?</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="side_effects">Know Your Side Effects</string>
    <string name="glossary">Glossary</string>
    <string name="start_alk_chat">Start ALK Chat</string>
    <string name="all_symptoms">All Symptoms</string>
    <string name="marked">Marked</string>
    <string name="showing_results">Showing Results: 02</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="view_health_card">VIEW HEALTH CARD</string>
    <string name="my_health_vitals">My Health Vitals</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_documents">My Documents</string>
    <string name="my_side_effect_history">My Side Effect History</string>
    <string name="medicine_reminder">Medicine Reminder</string>
    <string name="menu">Menu</string>
    <string name="my_profile">My Profile</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="logout">Log Out</string>
    <string name="health_vitals">Health Vitals as on</string>
    <string name="health_vitals_">Health Vitals</string>
    <string name="time">Time:</string>
    <string name="body_weight">Body Weight:</string>
    <string name="body_weight_">Body Weight</string>
    <string name="blood_pressure">Blood Pressure:</string>
    <string name="blood_pressure_">Blood Pressure</string>
    <string name="blood_sugar">Blood Sugar (PP):</string>
    <string name="blood_sugar_">Blood Sugar (PP)</string>
    <string name="blood_sugar_fasting">Blood Sugar (Fasting):</string>
    <string name="blood_sugar_fasting_">Blood Sugar (Fasting)</string>
    <string name="oxygen">Oxygen Saturation (SpO2):</string>
    <string name="delete">Delete</string>
    <string name="medicine_skipped">Medicine Skipped!</string>
    <string name="medicine_taken">Medicine Taken!</string>
    <string name="download">Download</string>
    <string name="existing_side_effects">Existing Side Effects</string>
    <string name="medicine_scheduled">Medicine Scheduled</string>
    <string name="previous_size_effects">Previous Size Effects</string>
    <string name="add_health_vitals">Add Health Vitals</string>
    <string name="add_new_vital">Add New Vital</string>
    <string name="save">Save</string>
    <string name="my_health_card">My Health Card</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="dob">Date of Birth</string>
    <string name="sex">Sex</string>
    <string name="date_of_diagnosis">Date of Diagnosis</string>
    <string name="no_of_comorbidities">No. of Comorbidities</string>
    <string name="comorbidity">Comorbidity</string>
    <string name="ngs_result">NGS Result</string>
    <string name="ihc">IHC</string>
    <string name="fish">FISH</string>
    <string name="smoking">Smoking</string>
    <string name="ecog_ps">ECOG PS</string>
    <string name="extra_thoracic_mets">Extra Thoracic Mets</string>
    <string name="no_of_etm">No. of ETM</string>
    <string name="brain_mets">Brain Mets</string>
    <string name="side_effect">Side Effect:</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="no_of_pill">No. of Pill</string>
    <string name="dosage">Dosage</string>
    <string name="set_a_new_reminder">Set a New Reminder</string>
    <string name="choose_type">Choose type</string>
    <string name="repeat">Repeat</string>
    <string name="everyday">Everyday</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="sound">Sound</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="alk_chat">ALK Chat</string>
    <string name="my_chats">My Chats</string>
    <string name="mark_all">Mark All</string>
    <string name="today">Today</string>
    <string name="completed">Completed</string>
    <string name="archived">Archived</string>
    <string name="total_documents">Total Documents: 18</string>
    <string name="select_all">SELECT ALL</string>
    <string name="upload_new">Upload New</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_document_type">Choose Document Type</string>
    <string name="choose_category">Choose Category</string>
    <string name="select_from_dropdown">Select from dropdown</string>
    <string name="record_name">Record Name</string>
    <string name="record_date">Record Date</string>
    <string name="record_time">Record Time</string>
    <string name="upload">Upload</string>
    <string name="medical_terms">Medical Terms</string>
    <string name="prescription_abbreviations">Prescription Abbreviations</string>
    <string name="notifications">Notifications</string>
    <string name="i_accept_all_the_terms_amp_conditions"><![CDATA[I Accept All the Terms & Conditions]]></string>
    <string name="yesterday">Yesterday</string>
    <string name="mri_brain_reports">MRI Brain Reports</string>
    <string name="mri_date">MRI Date</string>
    <string name="cranial_rt">Cranial RT</string>
    <string name="timing_of_cranial_rt">Timing of Cranial RT</string>
    <string name="lm_mets">LM mets</string>
    <string name="histiology">Histiology</string>
    <string name="ttf1">TTF1</string>
    <string name="pd_l1">PD L1</string>
    <string name="tki_drug">TKI Drug</string>
    <string name="date_of_start_tki">Date of Start of TKI</string>
    <string name="best_resp_extra">Best Resp. Extra</string>
    <string name="not_assessed">Not Assessed</string>
    <string name="toxicity">Toxicity</string>
    <string name="first_pfs">1st PFS</string>
    <string name="add_value">Add Value</string>
    <string name="add">Add</string>
    <string name="export">EXPORT</string>
    <string name="start_new_chat">Start New Chat</string>
    <string name="enter_email_others">Enter email others</string>
    <string name="cr_no">Cr No.</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transactional">Transactional</string>
    <string name="progressive_data">Progressive Data</string>
    <string name="regularize"><u>Regularize</u></string>
    <string name="_1st_line_of_treatment"><u>1st Line of Treatment</u></string>
    <string name="_2nd_line_of_treatment"><u>2nd Line of Treatment</u></string>
    <string name="_3rd_line_of_treatment"><u>3rd Line of Treatment</u></string>
    <string name="no_address"><u>No Address Provided</u></string>
    <string name="update">Update</string>
    <string name="search_here">Search here ...</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="enter_your_country">Enter your Country</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="enter_your_state">Enter your State</string>
    <string name="enter_your_pincode">Enter your Pincode</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="enter_your_weight">Enter your Weight (Kg)</string>
    <string name="enter_your_height">Enter your Height (Cm)</string>
    <string name="file_name">File Name</string>
    <string name="side_effects_details">Side Effects Details</string>
    <string name="symptoms"><u>Symptoms</u></string>
    <string name="short_desc"><u>Short Description</u></string>
    <string name="desc"><u>Description</u></string>
</resources>